// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TabBar render with a selected tab 1`] = `
.c5 {
  color: #666666;
  font-size: 14px;
  line-height: 20px;
  font-family: OswaldLight,Arial,sans-serif;
  font-weight: 400;
  -webkit-letter-spacing: normal;
  -moz-letter-spacing: normal;
  -ms-letter-spacing: normal;
  letter-spacing: normal;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  box-sizing: border-box;
  line-height: 1.43;
  overflow: hidden;
  color: #000000;
  border: 1px solid #E5E5E5;
  background-color: #FFFFFF;
  border-radius: 4px;
  height: 100%;
  width: 100%;
}

.c1 {
  position: relative;
  outline: none;
  width: 100%;
}

.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  white-space: nowrap;
  overflow-x: auto;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-scrollbar-width: none;
  -moz-scrollbar-width: none;
  -ms-scrollbar-width: none;
  scrollbar-width: none;
}

.c3::-webkit-scrollbar {
  display: none;
}

.c4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.c4 label {
  color: #999999;
  cursor: pointer;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  line-height: 1;
  place-items: center;
  place-content: center;
  font-family: OswaldLight,Arial,sans-serif;
  font-size: 14px;
  text-transform: uppercase;
  font-weight: 700;
  width: 100%;
  padding: 0 16px;
  height: 100%;
  min-height: 52px;
  position: relative;
  text-align: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c4 label::after {
  -webkit-animation: dRkaku 0.2s linear forwards;
  animation: dRkaku 0.2s linear forwards;
  background-color: #00C8DC;
  bottom: 0;
  content: ' ';
  display: none;
  height: 2px;
  left: 0;
  position: absolute;
  right: 0;
  width: 100%;
}

.c4 input[type='radio'] {
  display: none;
}

.c4 input[type='radio']:checked ~ label {
  font-weight: 600;
  color: #000000;
}

.c4 input[type='radio']:checked ~ label::after {
  display: block;
}

.c4 input[type='radio']:enabled:hover ~ label::after {
  display: block;
}

@media (min-width:512px) {

}

@media screen and (-ms-high-contrast:active),screen and (-ms-high-contrast:none) {
  .c0 {
    display: none;
  }
}

@media (min-width:752px) {
  .c4 label {
    font-size: 16px;
  }
}

@media (max-width:752px) {
  .c4 label {
    padding: 0 16px;
  }
}

<div
  className="c0"
>
  <div
    className="c1 "
  >
    <div
      className="c2"
      display="flex"
      elevation={0}
      shape="rounded-small"
    >
      <div
        className="c3"
      >
        <div
          className="c4"
          onClick={[Function]}
        >
          <input
            checked={true}
            disabled={false}
            id="tab1"
            name="first"
            readOnly={true}
            type="radio"
          />
          <label
            className="c5"
            color="grey5"
            disabled={false}
            fontSize="xs"
            htmlFor="tab1"
          >
            Preferences
          </label>
        </div>
        <div
          className="c4"
          onClick={[Function]}
        >
          <input
            checked={false}
            disabled={false}
            id="tab2"
            name="first"
            readOnly={true}
            type="radio"
          />
          <label
            className="c5"
            color="grey5"
            disabled={false}
            fontSize="xs"
            htmlFor="tab2"
          >
            Goals
          </label>
        </div>
        <div
          className="c4"
          onClick={[Function]}
        >
          <input
            checked={false}
            disabled={false}
            id="tab3"
            name="first"
            readOnly={true}
            type="radio"
          />
          <label
            className="c5"
            color="grey5"
            disabled={false}
            fontSize="xs"
            htmlFor="tab3"
          >
            Photo
          </label>
        </div>
        <div
          className="c4"
          onClick={[Function]}
        >
          <input
            checked={false}
            disabled={false}
            id="tab4"
            name="first"
            readOnly={true}
            type="radio"
          />
          <label
            className="c5"
            color="grey5"
            disabled={false}
            fontSize="xs"
            htmlFor="tab4"
          >
            Label 4
          </label>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`TabBar renders correctly 1`] = `
.c5 {
  color: #666666;
  font-size: 14px;
  line-height: 20px;
  font-family: OswaldLight,Arial,sans-serif;
  font-weight: 400;
  -webkit-letter-spacing: normal;
  -moz-letter-spacing: normal;
  -ms-letter-spacing: normal;
  letter-spacing: normal;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  box-sizing: border-box;
  line-height: 1.43;
  overflow: hidden;
  color: #000000;
  border: 1px solid #E5E5E5;
  background-color: #FFFFFF;
  border-radius: 4px;
  height: 100%;
  width: 100%;
}

.c1 {
  position: relative;
  outline: none;
  width: 100%;
}

.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  white-space: nowrap;
  overflow-x: auto;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-scrollbar-width: none;
  -moz-scrollbar-width: none;
  -ms-scrollbar-width: none;
  scrollbar-width: none;
}

.c3::-webkit-scrollbar {
  display: none;
}

.c4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.c4 label {
  color: #999999;
  cursor: pointer;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  line-height: 1;
  place-items: center;
  place-content: center;
  font-family: OswaldLight,Arial,sans-serif;
  font-size: 14px;
  text-transform: uppercase;
  font-weight: 700;
  width: 100%;
  padding: 0 16px;
  height: 100%;
  min-height: 52px;
  position: relative;
  text-align: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c4 label::after {
  -webkit-animation: dRkaku 0.2s linear forwards;
  animation: dRkaku 0.2s linear forwards;
  background-color: #00C8DC;
  bottom: 0;
  content: ' ';
  display: none;
  height: 2px;
  left: 0;
  position: absolute;
  right: 0;
  width: 100%;
}

.c4 input[type='radio'] {
  display: none;
}

.c4 input[type='radio']:checked ~ label {
  font-weight: 600;
  color: #000000;
}

.c4 input[type='radio']:checked ~ label::after {
  display: block;
}

.c4 input[type='radio']:enabled:hover ~ label::after {
  display: block;
}

@media (min-width:512px) {

}

@media screen and (-ms-high-contrast:active),screen and (-ms-high-contrast:none) {
  .c0 {
    display: none;
  }
}

@media (min-width:752px) {
  .c4 label {
    font-size: 16px;
  }
}

@media (max-width:752px) {
  .c4 label {
    padding: 0 16px;
  }
}

<div
  className="c0"
>
  <div
    className="c1 "
  >
    <div
      className="c2"
      display="flex"
      elevation={0}
      shape="rounded-small"
    >
      <div
        className="c3"
      >
        <div
          className="c4"
          onClick={[Function]}
        >
          <input
            checked={false}
            disabled={false}
            id="tab1"
            name="first"
            readOnly={true}
            type="radio"
          />
          <label
            className="c5"
            color="grey5"
            disabled={false}
            fontSize="xs"
            htmlFor="tab1"
          >
            Preferences
          </label>
        </div>
        <div
          className="c4"
          onClick={[Function]}
        >
          <input
            checked={false}
            disabled={false}
            id="tab2"
            name="first"
            readOnly={true}
            type="radio"
          />
          <label
            className="c5"
            color="grey5"
            disabled={false}
            fontSize="xs"
            htmlFor="tab2"
          >
            Goals
          </label>
        </div>
        <div
          className="c4"
          onClick={[Function]}
        >
          <input
            checked={false}
            disabled={false}
            id="tab3"
            name="first"
            readOnly={true}
            type="radio"
          />
          <label
            className="c5"
            color="grey5"
            disabled={false}
            fontSize="xs"
            htmlFor="tab3"
          >
            Photo
          </label>
        </div>
        <div
          className="c4"
          onClick={[Function]}
        >
          <input
            checked={false}
            disabled={false}
            id="tab4"
            name="first"
            readOnly={true}
            type="radio"
          />
          <label
            className="c5"
            color="grey5"
            disabled={false}
            fontSize="xs"
            htmlFor="tab4"
          >
            Label 4
          </label>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`TabItem render with a disabled tab 1`] = `ReactWrapper {}`;

exports[`TabItem render with a selected tab 1`] = `
.c1 {
  color: #666666;
  font-size: 14px;
  line-height: 20px;
  font-family: OswaldLight,Arial,sans-serif;
  font-weight: 400;
  -webkit-letter-spacing: normal;
  -moz-letter-spacing: normal;
  -ms-letter-spacing: normal;
  letter-spacing: normal;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.c0 label {
  color: #999999;
  cursor: pointer;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  line-height: 1;
  place-items: center;
  place-content: center;
  font-family: OswaldLight,Arial,sans-serif;
  font-size: 14px;
  text-transform: uppercase;
  font-weight: 700;
  width: 100%;
  padding: 0 16px;
  height: 100%;
  min-height: 52px;
  position: relative;
  text-align: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c0 label::after {
  -webkit-animation: dRkaku 0.2s linear forwards;
  animation: dRkaku 0.2s linear forwards;
  background-color: #00C8DC;
  bottom: 0;
  content: ' ';
  display: none;
  height: 2px;
  left: 0;
  position: absolute;
  right: 0;
  width: 100%;
}

.c0 input[type='radio'] {
  display: none;
}

.c0 input[type='radio']:checked ~ label {
  font-weight: 600;
  color: #000000;
}

.c0 input[type='radio']:checked ~ label::after {
  display: block;
}

.c0 input[type='radio']:enabled:hover ~ label::after {
  display: block;
}

@media (min-width:752px) {
  .c0 label {
    font-size: 16px;
  }
}

@media (max-width:752px) {
  .c0 label {
    padding: 0 16px;
  }
}

<div
  className="c0"
  onClick={[Function]}
>
  <input
    checked={true}
    disabled={false}
    id="1"
    name="first"
    readOnly={true}
    type="radio"
  />
  <label
    className="c1"
    color="grey5"
    disabled={false}
    fontSize="xs"
    htmlFor="1"
  >
    Preferences
  </label>
</div>
`;

exports[`TabItem renders basic 1`] = `
.c1 {
  color: #666666;
  font-size: 14px;
  line-height: 20px;
  font-family: OswaldLight,Arial,sans-serif;
  font-weight: 400;
  -webkit-letter-spacing: normal;
  -moz-letter-spacing: normal;
  -ms-letter-spacing: normal;
  letter-spacing: normal;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.c0 label {
  color: #999999;
  cursor: pointer;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  line-height: 1;
  place-items: center;
  place-content: center;
  font-family: OswaldLight,Arial,sans-serif;
  font-size: 14px;
  text-transform: uppercase;
  font-weight: 700;
  width: 100%;
  padding: 0 16px;
  height: 100%;
  min-height: 52px;
  position: relative;
  text-align: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c0 label::after {
  -webkit-animation: dRkaku 0.2s linear forwards;
  animation: dRkaku 0.2s linear forwards;
  background-color: #00C8DC;
  bottom: 0;
  content: ' ';
  display: none;
  height: 2px;
  left: 0;
  position: absolute;
  right: 0;
  width: 100%;
}

.c0 input[type='radio'] {
  display: none;
}

.c0 input[type='radio']:checked ~ label {
  font-weight: 600;
  color: #000000;
}

.c0 input[type='radio']:checked ~ label::after {
  display: block;
}

.c0 input[type='radio']:enabled:hover ~ label::after {
  display: block;
}

@media (min-width:752px) {
  .c0 label {
    font-size: 16px;
  }
}

@media (max-width:752px) {
  .c0 label {
    padding: 0 16px;
  }
}

<div
  className="c0"
  onClick={[Function]}
>
  <input
    checked={false}
    disabled={false}
    id="1"
    name="first"
    readOnly={true}
    type="radio"
  />
  <label
    className="c1"
    color="grey5"
    disabled={false}
    fontSize="xs"
    htmlFor="1"
  >
    Preferences
  </label>
</div>
`;
